--- a/build.gradle
+++ b/build.gradle
@@ -1,35 +1,28 @@
 
 plugins {
-    id 'java'
-    id 'maven-publish'
+    id 'java-library'    
     id 'maven'
     id 'signing'
 }
 
+version = '1.0'
+group = 'org.qenherkhopeshef'
+description = "${project.name}"
+archivesBaseName = "${project.name}"
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+}
+
 repositories {   
-    mavenCentral() 
+    jcenter() 
     mavenLocal()
 }
 
 dependencies {
     testImplementation 'junit:junit:4.12'
 }
-
-group = 'org.qenherkhopeshef'
-version = '1.0'
-description = '${project.name}'
-sourceCompatibility = '1.8'
-targetCompatibility = '1.8'
-
-
-publishing {
-    publications {
-        maven(MavenPublication) {
-            from(components.java)
-        }
-    }
-}
-
 
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
@@ -40,10 +33,7 @@ clean {
 	delete "bin"
 }
 
-
 // Below : specific sonatype publication stuff
-
-
 
 task javadocJar(type: Jar) {
     classifier = 'javadoc'
@@ -72,7 +62,7 @@ if (JavaVersion.current().isJava8Compatible()) {
 ext.isReleaseVersion = !version.endsWith("SNAPSHOT")
 
 tasks.withType(Sign) {
-    onlyIf { gradle.taskGraph.hasTask("uploadArchives")  }
+    onlyIf { gradle.taskGraph.hasTask(":doSign")  }
 }
 
 signing {
@@ -80,6 +70,11 @@ signing {
     sign configurations.archives
 }
 
+task doSign {
+  dependsOn build
+}
+
+uploadArchives.dependsOn(doSign)
 
 uploadArchives {
   repositories {
